# pageseeds-app

./: .env.example  .gitignore  AGENTS.md  AI_QUICK_START.md  CONTRACTS.md  QUEUE_DEBUG.md  README.md  REDDIT_PARITY_PLAN.md  SEO_MACHINE_PORTING_PLAN.md  STYLE_GUIDE.md  build-release.sh  build-windows.sh  eslint.config.js  index.html  link_recommendations.json  package.json  pnpm-lock.yaml  publish-release.sh  seo_feature_spec.md  seo_link_recommendations.json  vite.config.ts
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json  ts-rs.toml
src-tauri/.config/: nextest.toml
src-tauri/bindings/: AgentPolicy.ts  ApprovalStatus.ts  Article.ts  AssetType.ts  CannibalizationSelection.ts  CanvasSize.ts  ClarityConnectionStatus.ts  ClarityExportRowPayload.ts  ClaritySkippedFinding.ts  ClaritySummaryPayload.ts  ClarityTaskCreationResult.ts  ClusterContext.ts  CompetitorStructure.ts  Confidence.ts  ConsecutiveViolation.ts  ContentFixChanges.ts  ContentFixFaq.ts  ContentFixPatch.ts  ContentQualityReview.ts  ContentReviewSelectableArtifact.ts  CreateCampaignRequest.ts  CtrComparisonTableRow.ts  CtrFix.ts  CtrFixApplied.ts  CtrFixPatchChanges.ts  CtrFixPatchFaqQuestion.ts  CtrFixSkipped.ts  CtrFixType.ts  CtrHealthArticle.ts  CtrHealthSummary.ts  CtrOutcome.ts  CtrRecommendation.ts  CtrRenderedPageAudit.ts  DriftUrl.ts  DroppedProposal.ts  EnqueueItem.ts  EnqueueMode.ts  ExecutionResult.ts  ExtractedExample.ts  ExtractedHeading.ts  (+62 more)
src-tauri/config/: tool_catalog.toml
src-tauri/examples/: can_audit_smoke.rs  content_review_smoke.rs  ctr_audit_smoke.rs  run_reddit_replies.rs  run_reddit_reply_tasks.rs  run_reddit_workflow.rs  test_reddit_config_parse.rs  test_reddit_full_flow.rs
src-tauri/icons/: icon.icns
src-tauri/skills/cannibalization-strategy/: SKILL.md
src-tauri/skills/clarity-investigate/: SKILL.md
src-tauri/skills/content-fix-apply/: SKILL.md
src-tauri/skills/content-quality-review/: SKILL.md
src-tauri/skills/content-write/: SKILL.md
src-tauri/skills/ctr-fix-apply/: SKILL.md
src-tauri/skills/ctr-optimization/: SKILL.md
src-tauri/skills/ctr-schema-renderer/: SKILL.md
src-tauri/skills/ctr-template-fix/: SKILL.md
src-tauri/skills/gsc-investigate/: SKILL.md
src-tauri/skills/hub-outline/: SKILL.md
src-tauri/skills/hub-write/: SKILL.md
src-tauri/skills/indexing-fix/: SKILL.md
src-tauri/skills/landing-page-write/: SKILL.md
src-tauri/skills/merge-content/: SKILL.md
src-tauri/src/: error.rs  lib.rs  main.rs  test_support.rs
src-tauri/src/db/: mod.rs  (+5 more)
src-tauri/tests/: clarity_followup_test.rs  kimi_debug_test.rs  kimi_env_test.rs  kimi_instrumentation_test.rs  kimi_isolated_test.rs  kimi_session_test.rs  kimi_simple_test.rs  kimi_tauri_like_test.rs  queue_e2e_test.rs  queue_flow_test.rs  queue_integration_debug.rs  queue_integration_test.rs  queue_simple_test.rs  reddit_backend_trigger_test.rs  reddit_e2e_test.rs  reddit_safety_test.rs
(+737 files in other folders)
