[package]
name = "pageseeds"
version = "0.1.0"
description = "PageSeeds Desktop App"
authors = []
edition = "2021"
rust-version = "1.77.2"
default-run = "pageseeds"

[lib]
name = "pageseeds_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dotenvy = "0.15"
dirs = "5"
log = "0.4"
regex = "1"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "process", "macros"] }
futures = "0.3"
jsonwebtoken = "9"
csv = "1"
urlencoding = "2"
env_logger = "0.11"
ts-rs = { version = "12", features = ["serde-json-impl"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
agent-wrapper = { git = "https://github.com/fstrauf/agent-wrapper", tag = "v0.1.0" }
rig-core = { version = "0.35", features = ["derive"] }
schemars = "1.0"
async-trait = "0.1"
writing-analysis = "0.1"
once_cell = "1"
scraper = "0.26"
url = "2"
base64 = "0.22"


[dev-dependencies]
wiremock = "0.6"
